closes #1 Разработан класс MyReflection с методами getMethods - Метод получения списока методов getMethodsByAnnotation - Метод получения списока методов, которые проаннотированы аннотацией, заданной в параметры createAnInstanceOfTheClass - Метод, создающий экземпляр класса Class через default constructor, если default constructor отсутствует или создать экземпляр не удалось выкидывает run-time исключение. getFullAnnotation - Метод, возвращает список аннотаций класса, если аннотации дублируются, то используется та, которая наследника.
В классе MyReflectionTest происходит тестирование данных методов